--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,18 @@
 GameName=Freedom_Life
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Player/Maps/Zone1.Zone1
-GameDefaultMap=/Game/Player/Maps/Zone1.Zone1
-TransitionMap=
+EditorStartupMap=/Game/Maps/Menu.Menu
+LocalMapOptions=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Game/Class/Code/gI_ClassSelect.gI_ClassSelect_C
+GameDefaultMap=/Game/Maps/Menu.Menu
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=None
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
