--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=Freedom_Life
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Menu.Menu
+EditorStartupMap=/Game/Maps/FirstOpus.FirstOpus
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -11,7 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Class/Code/gI_ClassSelect.gI_ClassSelect_C
-GameDefaultMap=/Game/Maps/Menu.Menu
+GameDefaultMap=/Game/Maps/Menu/Menu.Menu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=None
 GlobalDefaultServerGameMode=None
