Inventory / Equipements / Interactions

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Class/Code/gI_ClassSelect.gI_ClassSelect_C
 GameDefaultMap=/Game/Maps/Menu/Menu.Menu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=None
+GlobalDefaultGameMode=/Game/Player/BluePrint/GM_Player.GM_Player_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
